# openfaas-python-sdk

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-test.yml  publish.yml
openfaas/: __init__.py  _transport.py  auth.py  client.py  exceptions.py  exchange.py  models.py  token.py  token_cache.py
openfaas/builder/: __init__.py  client.py  models.py  tar.py
tests/: test_auth.py  test_builder.py  test_client.py  test_iam.py  test_models.py
